Make hebrew and greek tests generic

--- a/test/bible-greek/bible-greek.html
+++ b/test/bible-greek/bible-greek.html
@@ -5,7 +5,7 @@
     <title>Test 8 Greek  Editions</title>
     <script src="../../traviz-min.js"></script>
     <link rel="stylesheet" type="text/css" href="../../traviz.css"></link>
-    <script src="data.js"></script>
+    <script src="data/bible-greek.js"></script>
     <script src="BibleViz.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"></link>
   </head>  
