--- a/test/bible-greek/ps107.html
+++ b/test/bible-greek/ps107.html
@@ -5,8 +5,8 @@
     <title>Test LXX</title>
     <script src="../../traviz-min.js"></script>
     <link rel="stylesheet" type="text/css" href="../../traviz.css"></link>
-    <script src="ps107/data.js"></script>
-    <script src="ps107/BibleViz.js"></script>
+    <script src="data/ps107.js"></script>
+    <script src="BibleViz.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"></link>
   </head>  
   <body>
