--- a/test/bible-hebrew/bible-hebrew.html
+++ b/test/bible-hebrew/bible-hebrew.html
@@ -5,7 +5,7 @@
     <title>Test Hebrew Editions</title>
     <script src="../../traviz.js"></script>
     <link rel="stylesheet" type="text/css" href="../../traviz.css"></link>
-    <script src="data.js"></script>
+    <script src="data/bible-hebrew.js"></script>
     <script src="BibleViz.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"></link>
   </head>  
