--- a/test/bible-hebrew/ps18-2sam22.html
+++ b/test/bible-hebrew/ps18-2sam22.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> 
     <title>Psalm 18 vs 2 Samuel 22</title>
     <script src="../../traviz.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../traviz.css"></link>
+    <link rel="stylesheet" type="text/css" href="../../traviz-jus.css"></link>
     <script src="data/ps18-2sam22.js"></script>
     <script src="BibleViz.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"></link>
