--- a/test/bible-nwt/bible.html
+++ b/test/bible-nwt/bible.html
@@ -3,7 +3,7 @@
   <head>
     <title>John 17 in 4 editions of NWT and ESV</title>
     <script src="../../traviz-min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../traviz.css"></link>
+    <link rel="stylesheet" type="text/css" href="../../traviz-jus.css"></link>
     <script src="data.js"></script>
     <script src="BibleViz.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"></link>
