--- a/test/bible-greek/ps107.html
+++ b/test/bible-greek/ps107.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> 
     <title>Test LXX</title>
     <script src="../../traviz-min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../traviz.css"></link>
+    <link rel="stylesheet" type="text/css" href="../../traviz-jus.css"></link>
     <script src="data/ps107.js"></script>
     <script src="BibleViz.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"></link>
