--- a/test/bible-hebrew/deut32.43.html
+++ b/test/bible-hebrew/deut32.43.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> 
     <title>Deuteronomy 32:43</title>
     <script src="../../traviz.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../traviz.css"></link>
+    <link rel="stylesheet" type="text/css" href="../../traviz-jus.css"></link>
     <script src="data/deut32.43.js"></script>
     <script src="BibleViz.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"></link>
