--- a/test/bible-hebrew/isa2-mic4.html
+++ b/test/bible-hebrew/isa2-mic4.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> 
     <title>Isaiah 2 vs Micah 4</title>
     <script src="../../traviz.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../traviz.css"></link>
+    <link rel="stylesheet" type="text/css" href="../../traviz-jus.css"></link>
     <script src="data/isa2-mic4.js"></script>
     <script src="BibleViz.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"></link>
