--- a/test/bible-hebrew/num29.html
+++ b/test/bible-hebrew/num29.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> 
     <title>Sukkot 1-8 Numbers 29:12-38</title>
     <script src="../../traviz.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../traviz.css"></link>
+    <link rel="stylesheet" type="text/css" href="../../traviz-jus.css"></link>
     <script src="data/num29.js"></script>
     <script src="BibleViz.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"></link>
