--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ Hebrew:
 <li><a href="test/bible-hebrew/num7-maqaf.html">Numbers 7 - Maqaf</a></li>
 <li><a href="test/bible-hebrew/ps14-ps53.html">Psalm 14 vs Psalm 53</a></li>
 <li><a href="test/bible-hebrew/ps18-2sam22.html">Psalm 18 vs 2 Samuel 22</a></li>
+<li><a href="test/bible-hebrew/betzalel.html">Betzal'el</a></li>
 
 <br/>
 
