Add Oba1 vs Jer49 Edom; update index and titles

--- a/test/bible-hebrew/edom.html
+++ b/test/bible-hebrew/edom.html
@@ -2,10 +2,10 @@
 <html>
   <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> 
-    <title>Rebekah: Genesis 24</title>
+    <title>Concerning Edom: Obadiah 1 vs Jeremiah 49</title>
     <script src="../../traviz.js"></script>
     <link rel="stylesheet" type="text/css" href="../../traviz-jus.css"></link>
-    <script src="data/gen24.js"></script>
+    <script src="data/edom.js"></script>
     <script src="BibleViz.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"></link>
   </head>  
