--- a/test/bible-hebrew/ps14-ps53.html
+++ b/test/bible-hebrew/ps14-ps53.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> 
-    <title>Psalm 14 vs Psalm 53</title>
+    <title>The Fool Says: Psalm 14 vs Psalm 53</title>
     <script src="../../traviz.js"></script>
     <link rel="stylesheet" type="text/css" href="../../traviz-jus.css"></link>
     <script src="data/ps14-ps53.js"></script>
