--- a/test/bible-hebrew/ps18-2sam22.html
+++ b/test/bible-hebrew/ps18-2sam22.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> 
-    <title>Psalm 18 vs 2 Samuel 22</title>
+    <title>David's Song: Psalm 18 vs 2 Samuel 22</title>
     <script src="../../traviz.js"></script>
     <link rel="stylesheet" type="text/css" href="../../traviz-jus.css"></link>
     <script src="data/ps18-2sam22.js"></script>
