--- a/test/bible-hebrew/betzalel.html
+++ b/test/bible-hebrew/betzalel.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> 
-    <title>Betzal'el Exodus 25-30 vs 35-40</title>
+    <title>Betzal'el: Exodus 25-30 vs Exodus 35-40</title>
     <script src="../../traviz.js"></script>
     <link rel="stylesheet" type="text/css" href="../../traviz-jus.css"></link>
     <script src="data/betzalel.js"></script>
