--- a/test/bible-hebrew/num29.html
+++ b/test/bible-hebrew/num29.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> 
-    <title>Sukkot 1-8 Numbers 29:12-38</title>
+    <title>Sukkot Offerings: Numbers 29:12-38</title>
     <script src="../../traviz.js"></script>
     <link rel="stylesheet" type="text/css" href="../../traviz-jus.css"></link>
     <script src="data/num29.js"></script>
