--- a/test/bible-hebrew/num7-maqaf.html
+++ b/test/bible-hebrew/num7-maqaf.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> 
-    <title>Numbers 7 Tribes - Separated Maqaf</title>
+    <title>Consecration Gifts: Numbers 7 - Maqaf</title>
     <script src="../../traviz.js"></script>
     <link rel="stylesheet" type="text/css" href="../../traviz-jus.css"></link>
     <script src="data/num7-maqaf.js"></script>
