Add num 1 tribes of Israel

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ Hebrew:
 <li><a href="test/bible-hebrew/ps18-2sam22.html">David's Song: Psalm 18 vs 2 Samuel 22</a></li>
 <li><a href="test/bible-hebrew/betzalel.html">Betzal'el: Exodus 25-30 vs Exodus 35-40</a></li>
 <li><a href="test/bible-hebrew/edom.html">Concerning Edom: Obadiah 1 vs Jeremiah 49</a></li>
+<li><a href="test/bible-hebrew/num1.html">Numbering the tribes: Numbers 1</a></li>
 
 <br/>
 
