--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ Greek:
 <li><a href="test/bible-greek/bible-greek.html">Acts 20:28</a></li>
 <li><a href="test/bible-greek/conversion.html">Paul's Conversion: Acts 9 vs 22 vs 26</a></li>
 <li><a href="test/bible-greek/hebrews.html">Hebrews vs LXX</a></li>
+<li><a href="test/bible-greek/luke4.html">Luke 4:18-19 NA27 vs TR vs LXX Isaiah 61:1-2</a></li>
 
 <br/>
 
