Add Acts7 vs Amos5

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ Greek:
 <li><a href="test/bible-greek/conversion.html">Paul's Conversion: Acts 9 vs 22 vs 26</a></li>
 <li><a href="test/bible-greek/hebrews.html">Hebrews vs LXX</a></li>
 <li><a href="test/bible-greek/luke4.html">Luke 4:18-19 NA27 vs TR vs LXX Isaiah 61:1-2</a></li>
+<li><a href="test/bible-greek/acts7.html">Acts 7:42-43 NA27 vs LXX Amos 5:25-27</a></li>
 
 <br/>
 
